# evanesco-offline

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml
configs/policies/: gdpr.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  route.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: architecture.html  architecture.md  architecture.mmd  conf.py  deployment.md  index.md  requirements.txt  usage.md
docs/_build/: .buildinfo  architecture.html  deployment.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/.doctrees/: architecture.doctree  deployment.doctree  environment.pickle  index.doctree  usage.doctree
docs/_build/_sources/: architecture.md.txt  index.md.txt  usage.md.txt
docs/_build/api/: index.html
docs/api/: core.md  index.rst
docs/api/_autosummary/: evanesco.align.rst  evanesco.api.rst  evanesco.audit.rst  evanesco.cli.rst  evanesco.core.rst  evanesco.data.prompts.rst  evanesco.health.rst  evanesco.llm.rst  evanesco.logging.rst  evanesco.ollama_client.rst  evanesco.policy.rst  evanesco.redact.rst  (+5 more)
scripts/: generate_fake_pdfs.py  render_diagram.sh
src/evanesco/: __init__.py  align.py  api.py  audit.py  batch.py  cli.py  core.py  health.py  llm.py  logging.py  ocr.py  ollama_client.py  policy.py  redact.py  regex_detect.py  settings.py  spacy_detect.py  ui.py
src/evanesco_offline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/prompts/: ner_fewshot.jsonl
tests/: test_api_security.py
(+72 files in other folders)
